--- a/documentation/human_evaluation.ipynb
+++ b/documentation/human_evaluation.ipynb
@@ -13,22 +13,19 @@
     "import argilla\n",
     "from datasets import load_dataset\n",
     "from dotenv import load_dotenv\n",
-    "from pydantic import BaseModel\n",
-    "\n",
-    "from pharia_inference_sdk.connectors import (\n",
-    "    LimitedConcurrencyClient\n",
-    ")\n",
-    "\n",
-    "from pharia_studio_sdk.connectors import (\n",
-    "    ArgillaEvaluation,\n",
-    "    ArgillaWrapperClient,\n",
-    "    RecordData,\n",
-    ")\n",
+    "from pharia_inference_sdk.connectors import LimitedConcurrencyClient\n",
     "from pharia_inference_sdk.core import (\n",
     "    CompleteOutput,\n",
     "    Instruct,\n",
     "    InstructInput,\n",
     "    LuminousControlModel,\n",
+    ")\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "from pharia_studio_sdk.connectors import (\n",
+    "    ArgillaEvaluation,\n",
+    "    ArgillaWrapperClient,\n",
+    "    RecordData,\n",
     ")\n",
     "from pharia_studio_sdk.evaluation import (\n",
     "    AggregationLogic,\n",
