--- a/documentation/how_to_aggregate_evaluations.ipynb
+++ b/documentation/how_to_aggregate_evaluations.ipynb
@@ -64,7 +64,8 @@
     "# Step 3\n",
     "print(aggregation_overview.id)\n",
     "print(aggregation_overview.labels)\n",
-    "print(aggregation_overview.metadata)"
+    "print(aggregation_overview.metadata)\n",
+    "assert False"
    ]
   }
  ],
