--- a/documentation/how_to_aggregate_evaluations.ipynb
+++ b/documentation/how_to_aggregate_evaluations.ipynb
@@ -64,8 +64,7 @@
     "# Step 3\n",
     "print(aggregation_overview.id)\n",
     "print(aggregation_overview.labels)\n",
-    "print(aggregation_overview.metadata)\n",
-    "assert False"
+    "print(aggregation_overview.metadata)"
    ]
   }
  ],
